# livekit-one

./: .gitignore  README.md  agent.py  agent_II.txt  livekit.toml  pyproject.toml
working_agents/: 3) with end session tool call II.txt  3) with end session tool call.txt  4) gemini live.txt
working_agents/gemini_live/: 2) gemini with start msg and end call.txt
working_agents/stt-tts/: 1) simple.txt  4) with end session tool call II.txt  5) with call end summary.txt  6) with mins simulation.txt
