[project]
name = "livekit-gemini"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "livekit-agents[google]~=1.3",
    "livekit-plugins-noise-cancellation>=0.1",
    "livekit-plugins-silero>=0.1",
    "livekit-plugins-turn-detector>=0.1",
    "python-dotenv>=1.2.1",
    "handlebars>=0.1",
]
